<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_ChatApp">Welcome to ChatApp</string>
    <string name="read_our_pr">"Read our Privacy Policy. Tap Agree &amp; Continue to accept the Terms of Service. "</string>
    <string name="from_faraz" translatable="false">from FARAZ</string>
    <string name="enter_sms_c">Enter SMS code</string>
    <string name="countrycode" translatable="false">+91</string>
    <string name="Done">Done</string>
    <string name="usernameLabel">Username</string>
    <string name="about">About</string>
    <string name="username">USERNAME</string>
    <string name="logout">Logout</string>
    <string name="chat">CHATS</string>
    <string name="group_chat">GROUPS</string>
    <string name="TypeaMessage">Type a message</string>
    <string name="create_group">Create Group</string>
    <string name="hi">Hi</string>
    <string name="demo_time" translatable="false">11:34</string>
    <string name="enter_your_group_name">Enter your group name..</string>
    <string name="add_participants">Add participants</string>
    <string name="new_group">New Group</string>
    <string name="select_chat">Select Chat</string>
    <string name="send">send</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="message" translatable="false">Message</string>
    <string name="phone" translatable="false">Phone Number</string>
</resources>