<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:id="@+id/rec_msg_layout"
        android:background="@drawable/rec_msg_bg"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingTop="@dimen/margin_xs"
        android:paddingBottom="@dimen/margin_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSenderNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/message_text"
            android:layout_marginTop="@dimen/margin_xs"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            android:text="@string/username"
            android:textColor="@color/sent_msg_color"
            android:textSize="@dimen/message_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            android:text="@string/hi"
            android:textColor="@android:color/white"
            android:textSize="@dimen/message_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSenderNameTV" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/msg_time_color"
            android:textSize="@dimen/time_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_text"
            android:text="@string/demo_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rec_img_layout"
        android:layout_width="@dimen/match_const"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:background="@drawable/rec_msg_bg"
        android:paddingStart="@dimen/margin_10"
        android:paddingEnd="@dimen/margin_10"
        android:paddingBottom="@dimen/margin_10"

        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guidelineV1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/imagesenderNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xs"
            android:maxWidth="@dimen/max_width"
            android:minWidth="@dimen/min_width"
            android:text="@string/username"
            android:textColor="@color/sent_msg_color"
            android:textSize="@dimen/message_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagesenderNameTV" />

        <TextView
            android:id="@+id/image_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/msg_time_color"
            android:textSize="@dimen/time_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_message"
            tools:text="@string/demo_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineV1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
